<?xml version="1.0" encoding="UTF-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical">
        
        <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
	
		    <EditText android:id="@+id/edit_subject"
		        android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:hint="@string/edit_subject"
		        android:layout_gravity="left"
		        />
		    
		    <Button
		        android:text="@string/button_send"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        android:layout_gravity="right"
		    	/>

		</LinearLayout>
	    	   
	    <EditText android:id="@+id/edit_message"
	        android:layout_height="match_parent"
	        android:layout_width="match_parent"
	        android:hint="@string/edit_message"
	        android:gravity="top"
	        />
	
	</LinearLayout>
	
</RelativeLayout>
